page 2 basic functionality done, button spacing fixed, SQL query tested and ready to use.

--- a/src/components/Chest/Chest.css
+++ b/src/components/Chest/Chest.css
@@ -6,22 +6,23 @@
 
 .archive-button {
     border: solid;
+    resize: none;
     border-width: 2px;
     border-color: #00d3f8;
     display: flex;
     justify-content: right;
-    clip-path: polygon(100% 0, 100% 53%, 97% 100%, 0 100%, 0 0);
+    clip-path: polygon(100% 0, 100% 53%, 96.5% 100%, 0 100%, 0 0);
 
 }
 
 .archive-button::after{
     content: "";
     width: 50px;
-    height: 90px;
-    position: absolute;
+    height: 93px;
+    position: relative;
     transform: rotate(45deg);
-    top: 168px;
-    right: 10px;
+    top: 55px;
+    left: 12px;
     
 
     border-width: 2px;
@@ -43,10 +44,13 @@
     height:30%;
     margin: 22px;
     text-transform: uppercase;
-    font-size: 20px;
+    font-size: 19px;
     color: rgba(211, 78, 78, 0.781);
     text-shadow: 0px 0px 3px rgba(211,78,78,0.91);
     cursor:pointer;
+
+    /* Animation */
+    transition: color .4s linear;
 }
 
 .archive-child:hover,
@@ -89,10 +93,58 @@
 }
 
 .new-button{
-    width: 50px;
-    height: 50px;
-    justify-content: right;
-    margin-left: 92.5%;
+    background-color: transparent;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    border: none;
+    height:68%;
+    margin: 2px;
+    padding: 3px;
+    text-transform: uppercase;
+    font-size: 20px;
+    color: rgba(211, 78, 78, 0.781);
+    text-shadow: 0px 0px 3px rgba(211,78,78,0.91);
+    cursor:pointer;
+
+    /* Animation */
+    transition: color .4s linear;
+}
+
+.new-button:hover,
+.new-button:hover::after{
+    color: #00d3f8;
+
+    transition: color 0.23s linear;
+
+    /* background, blends nicely if this is a button and the button is customized.., otherwise leave it out. */
+    /* background: rgb(0,0,0,0.25)*/ 
+}
+
+.back-button{
+    background-color: transparent;
+   justify-content: center;
+    border: none;
+    height:68%;
+    margin: 22px;
+    text-transform: uppercase;
+    font-size: 20px;
+    color: rgba(211, 78, 78, 0.781);
+    text-shadow: 0px 0px 3px rgba(211,78,78,0.91);
+    cursor:pointer;
+
+    /* Animation */
+    transition: color .4s linear;
+}
+
+.back-button:hover,
+.back-button:hover::after{
+    color: #00d3f8;
+
+    transition: color 0.23s linear;
+
+    /* background, blends nicely if this is a button and the button is customized.., otherwise leave it out. */
+    /* background: rgb(0,0,0,0.25)*/ 
 }
 
 .move {
